# iterm2-pane-tree

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.sh  pyproject.toml  setup.cfg  uninstall.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
iterm2_claude_cockpit/: __main__.py  extensions.json  iterm2_claude_cockpit.py
iterm2_claude_cockpit/extensions/: _api.py  _loader.py
iterm2_claude_cockpit/extensions/claude/: __init__.py
iterm2_claude_cockpit/extensions/claude/hooks/: notify.sh  uninstall.py
iterm2_claude_cockpit/extensions/claude/static/: claude.js
iterm2_claude_cockpit/server/: http.py  tree.py
iterm2_claude_cockpit/webview/: index.html  iterm_cheatsheet.html  styles.css
iterm_workflow/: __main__.py  iterm_workflow.py
iterm_workflow/extensions/: _api.py  _loader.py  _signals.py
iterm_workflow/extensions/claude/: __init__.py  detector.py
iterm_workflow/extensions/claude/hooks/: install.py  notify.sh
iterm_workflow/extensions/claude/static/: cheatsheet.html  claude.css  claude.js
iterm_workflow/projects/: example.yaml
iterm_workflow/server/: actions.py  http.py  tree.py
iterm_workflow/webview/: app.js  index.html  styles.css
specs/: architecture.md  extension-api.md  http-api.md  snapshot-format.md
