[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "iterm2-pane-tree"
version = "0.1.0"
description = "Live window/tab/pane tree panel for iTerm2"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Igor Grubic", email = "igorgrubic@users.noreply.github.com" }]
requires-python = ">=3.10"
dependencies = ["iterm2"]

[project.urls]
Homepage = "https://github.com/igorgrubic/iterm2-pane-tree"
"Bug Tracker" = "https://github.com/igorgrubic/iterm2-pane-tree/issues"

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["iterm_workflow"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
